set(GLM_TEST_ENABLE_CXX_17 ON)
set(GLM_TEST_ENABLE OFF)
set(GLM_TEST_ENABLE_SIMD_AVX2 ON)
set(gtest_force_shared_crt ON)

add_subdirectory(googletest)
add_subdirectory(GSL)
add_subdirectory(zlib)
add_subdirectory(libpng)
add_subdirectory(glm)
add_subdirectory(VulkanMemoryAllocator)
add_subdirectory(utf8proc)
add_subdirectory(rhea)
